kube-pr/api-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: derp-api-dep
  namespace: $NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: derp-api
  # pod below
  template:
    metadata:
      labels:
        app: derp-api
    spec:
      containers:
      - name: derp-api-container
        image: tjwalkr3/derp-raven-api:pr-$PULL_REQUEST_ID
        livenessProbe:
          httpGet:
            path: /api/healthcheck
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /api/healthcheck
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
        ports:
        - containerPort: 8080
