kube-pr/db-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: derp-db-dep
  namespace: $NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: derp-db
  # pod below
  template:
    metadata:
      labels:
        app: derp-db
    spec:
      volumes:
      - name: schema-init
        configMap:
          name: derp-init-sql
      containers:
      - name: derp-postgres
        volumeMounts:
        - mountPath: /docker-entrypoint-initdb.d/init.sql
          subPath: derp-db-init
          name: schema-init
        image: postgres:16
        livenessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 15
          periodSeconds: 10
        ports:
        - containerPort: 5432
