kube-pr/web-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: derp-web-dep
  namespace: $NAMESPACE
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  replicas: 3
  selector:
    matchLabels:
      app: derp-web
  # pod below
  template:
    metadata:
      labels:
        app: derp-web
    spec:
      containers:
      - name: derp-web-container
        image: tjwalkr3/derp-raven-web:pr-$BUILD_NUMBER
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
        ports:
        - containerPort: 80
