kube-pr/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: derp-db-svc
  namespace: $NAMESPACE
spec:
  selector:
    app: derp-db
  ports:
    - protocol: TCP
      port: 5432 # external port (doesn't have to be the same)
      targetPort: 5432
