kube-pr/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: derp-web-svc
  namespace: $NAMESPACE
spec:
  selector:
    app: derp-web
  ports:
    - protocol: TCP
      port: 80 # external port (doesn't have to be the same)
      targetPort: 80
