kube-pr/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: derp-web-ingress
  namespace: $NAMESPACE
spec:
  rules:
  - host: web-derp-pr.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: derp-web-svc
            port:
              number: 80
